[gd_scene load_steps=10 format=2]

[ext_resource path="res://tools/kingdom_tools/HoldingSelect.gd" type="Script" id=3]
[ext_resource path="res://menu/scripts/ToolTabs.gd" type="Script" id=5]
[ext_resource path="res://tools/land_tools/LandTools.gd" type="Script" id=13]
[ext_resource path="res://menu/scripts/UIElements.gd" type="Script" id=15]
[ext_resource path="res://tools/river_tools/RiverTools.gd" type="Script" id=16]
[ext_resource path="res://tools/kingdom_tools/HoldingSelector.gd" type="Script" id=19]
[ext_resource path="res://assets/sprites/icons/kingdom_selector.png" type="Texture" id=22]
[ext_resource path="res://tools/kingdom_tools/CountyTools.gd" type="Script" id=23]
[ext_resource path="res://tools/kingdom_tools/settlement_tools/SettlementTools.gd" type="Script" id=24]

[node name="Node2D" type="Node2D"]

[node name="LandPreview" type="Polygon2D" parent="."]
visible = false
color = Color( 0.266667, 1, 0, 0.376471 )
offset = Vector2( -48, -16 )
polygon = PoolVector2Array( 32, 0, 17, 15, 31, 30, 65, 30, 79, 15, 64, 0 )

[node name="Shadow" type="Polygon2D" parent="LandPreview"]
offset = Vector2( -48, -16 )
polygon = PoolVector2Array( 17, 15, 17, 25, 31, 40, 65, 40, 79, 25, 79, 15, 65, 30, 31, 30 )
vertex_colors = PoolColorArray( 0.266667, 1, 0, 0.376471, 0.266667, 1, 0, 0, 0.266667, 1, 0, 0, 0.266667, 1, 0, 0, 0.266667, 1, 0, 0, 0.266667, 1, 0, 0.376471, 0.266667, 1, 0, 0.376471, 0.266667, 1, 0, 0.376471 )

[node name="RiverPreview" type="Node2D" parent="."]

[node name="RiverCenter" type="Polygon2D" parent="RiverPreview"]
visible = false
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 6, 6, -6, 6, -6, -6, 6, -6 )

[node name="RiverEdge" type="Polygon2D" parent="RiverPreview"]
color = Color( 0.392157, 0.388235, 1, 1 )
polygon = PoolVector2Array( 0, -2, 2, 0, 0, 2, -2, 0 )

[node name="HoldingPreview" type="Node2D" parent="."]
script = ExtResource( 19 )

[node name="Shadow2" type="Polygon2D" parent="HoldingPreview"]
position = Vector2( 0, -0.999863 )
rotation = -3.14159
offset = Vector2( -48, -16 )
polygon = PoolVector2Array( 17, 15, 17, 25, 31, 40, 65, 40, 79, 25, 79, 15, 65, 30, 31, 30 )
vertex_colors = PoolColorArray( 0, 0.576471, 1, 1, 0, 0.576471, 1, 0, 0, 0.576471, 1, 0, 0, 0.576471, 1, 0, 0, 0.576471, 1, 0, 0, 0.576471, 1, 1, 0, 0.576471, 1, 1, 0, 0.576471, 1, 1 )

[node name="Sprite" type="Sprite" parent="HoldingPreview"]
texture = ExtResource( 22 )
offset = Vector2( 0, -32 )

[node name="Shadow" type="Polygon2D" parent="HoldingPreview"]
position = Vector2( 0, -8.99986 )
offset = Vector2( -48, -16 )
polygon = PoolVector2Array( 17, 15, 17, 25, 31, 40, 65, 40, 79, 25, 79, 15, 65, 30, 31, 30 )
vertex_colors = PoolColorArray( 0, 0.576471, 1, 0, 0, 0.576471, 1, 1, 0, 0.576471, 1, 1, 0, 0.576471, 1, 1, 0, 0.576471, 1, 1, 0, 0.576471, 1, 0, 0, 0.576471, 1, 0, 0, 0.576471, 1, 0 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.352941, 0.376471, 0.92549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIElements" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolTabs" type="TabContainer" parent="CanvasLayer/UIElements"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -166.0
margin_right = 326.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 170, 0 )
size_flags_vertical = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LandTools" type="PanelContainer" parent="CanvasLayer/UIElements/ToolTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 13 )
land_preview_path = NodePath("../../../../LandPreview")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UIElements/ToolTabs/LandTools"]
margin_left = 7.0
margin_top = 7.0
margin_right = 311.0
margin_bottom = 123.0
custom_constants/separation = 10

[node name="TileSelect" type="OptionButton" parent="CanvasLayer/UIElements/ToolTabs/LandTools/VBoxContainer"]
margin_right = 304.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushSizeLabel" type="Label" parent="CanvasLayer/UIElements/ToolTabs/LandTools/VBoxContainer"]
margin_top = 30.0
margin_right = 304.0
margin_bottom = 44.0
text = "Brush Size"
valign = 1

[node name="BrushSize" type="SpinBox" parent="CanvasLayer/UIElements/ToolTabs/LandTools/VBoxContainer"]
margin_top = 54.0
margin_right = 304.0
margin_bottom = 78.0
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UIElements/ToolTabs/LandTools/VBoxContainer"]
margin_top = 88.0
margin_right = 304.0
margin_bottom = 116.0

[node name="CellPosition" type="Label" parent="CanvasLayer/UIElements/ToolTabs/LandTools/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 297.0
margin_bottom = 21.0

[node name="RiverTools" type="PanelContainer" parent="CanvasLayer/UIElements/ToolTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 16 )
river_preview_path = NodePath("../../../../RiverPreview")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UIElements/ToolTabs/RiverTools"]
margin_left = 7.0
margin_top = 7.0
margin_right = 311.0
margin_bottom = 123.0

[node name="CellPosition" type="Label" parent="CanvasLayer/UIElements/ToolTabs/RiverTools/VBoxContainer"]
margin_right = 304.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RiverID" type="Label" parent="CanvasLayer/UIElements/ToolTabs/RiverTools/VBoxContainer"]
margin_top = 18.0
margin_right = 304.0
margin_bottom = 32.0

[node name="CountyTools" type="PanelContainer" parent="CanvasLayer/UIElements/ToolTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 23 )
holding_selector_path = NodePath("../../../../HoldingPreview")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UIElements/ToolTabs/CountyTools"]
margin_left = 7.0
margin_top = 7.0
margin_right = 311.0
margin_bottom = 123.0

[node name="HoldingSelect" type="OptionButton" parent="CanvasLayer/UIElements/ToolTabs/CountyTools/VBoxContainer"]
margin_right = 304.0
margin_bottom = 20.0
align = 1
script = ExtResource( 3 )

[node name="SettlementTools" type="PanelContainer" parent="CanvasLayer/UIElements/ToolTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -308.0
margin_bottom = -120.0
script = ExtResource( 24 )

[node name="FPSCounter" type="Label" parent="CanvasLayer/UIElements"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -170.0
margin_bottom = 14.0
grow_horizontal = 0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tab_changed" from="CanvasLayer/UIElements/ToolTabs" to="CanvasLayer/UIElements/ToolTabs" method="_on_ToolTabs_tab_changed"]
[connection signal="item_selected" from="CanvasLayer/UIElements/ToolTabs/CountyTools/VBoxContainer/HoldingSelect" to="CanvasLayer/UIElements/ToolTabs/CountyTools" method="_on_HoldingSelect_item_selected"]
[connection signal="item_selected" from="CanvasLayer/UIElements/ToolTabs/CountyTools/VBoxContainer/HoldingSelect" to="CanvasLayer/UIElements/ToolTabs/CountyTools/VBoxContainer/HoldingSelect" method="_on_HoldingSelect_item_selected"]
